--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 						<div class="banner_content">
 							<h3>Hello, I'm</h3>
 							<h2>Md. Jahidul Islam</h2>
-							<h5>Lecturer, Department of Engineering</h5>
-							<h5><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
+							<h4>Lecturer, Department of Computer Science and Engineering</h4>
+							<h4><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h4>
 							<a class="banner_btn btn btn-info" type="button" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
 							<div class="row projects-filter" style="text-align: center;">
 								<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
@@ -246,7 +246,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4">
         				<div class="tools_expert">
-						<h3><br><br>Research Specialization</h3>
+						<h3><br><br>Specialization</h3>
         					<div class="skill_main">
 							<div class="skill_item">
 								<h4 class="text-left"><b>Natural Language Processing</b></h4>
@@ -413,7 +413,7 @@
 				</div>
 					
 				<div class="projects_inner row">
-					<div class="col-lg-6 col-md-6 research .graduate_project">
+					<div class="col-lg-6 col-md-6 research graduate_project">
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
@@ -422,7 +422,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 research .graduate_project">
+					<div class="col-lg-6 col-md-6 research graduate_project">
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
@@ -431,7 +431,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 research .graduate_project">
+					<div class="col-lg-6 col-md-6 research graduate_project">
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
@@ -440,7 +440,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 research .graduate_projects">
+					<div class="col-lg-6 col-md-6 research graduate_projects">
 						<div class="projects_item">
 <!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
