--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 						<div class="banner_content">
 							<h3>Hello, I'm</h3>
 							<h2>Md. Jahidul Islam</h2>
-							<h4>Lecturer, Department of Computer Science and Engineering</h4>
-							<h4><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h4>
+							<h4>Lecturer</h4>
+							<h4>Department of Computer Science and Engineering</h4>
+							<h4><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion & Technology</a></h4>
 							<a class="banner_btn btn btn-info" type="button" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
 							<div class="row projects-filter" style="text-align: center;">
 								<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
@@ -164,7 +165,7 @@
         			<div class="col-lg-4 col-md-4">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion and Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.<br>Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
+        					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion & Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.<br>Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-4">
@@ -918,7 +919,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
                                 <h6>Dhaka, Bangladesh</h6>
-                                <p>Room No - 520, Department of Engineering<br>BGMEA University of Fashion & Technology, Nishatnagar, Turag,</p>
+                                <p>Department of Computer Science and Engineering<br>BGMEA University of Fashion & Technology, Nishatnagar, Turag,</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
