--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<li></li>
 										<li data-filter=".graduate_project">
 											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; padding: 0px;">
-												Graduate</br>Project
+												Graduate</br>Projects
 											</a>
 										</li>
 									</ul>
@@ -223,14 +223,14 @@
 							</div>
 							<div class="skill_item">
 								<h4 class="text-left"><b>Communication</b> 
-								(<span class="counter">80</span>%).</h4>
+								(<span class="counter">85</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
 								<h4 class="text-left"><b>Management</b> 
-								(<span class="counter">85</span>%).</h4>
+								(<span class="counter">90</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
