--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 							<h4>Department of Computer Science and Engineering</h4>
 							<h4><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion & Technology</a></h4>
 							<a class="banner_btn btn btn-info" type="button" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
+							<p align="center"> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=Profile%20views&color=0e75b6&style=flat" alt="jahid-jabed" /> </p>
 							<div class="row projects-filter" style="text-align: center;">
 								<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 									<ul class="wel_item filter list">
@@ -555,7 +556,7 @@
         			<p>Mr. Islam has more than four years of expertise in teaching the following subject areas in Computer Science and Engineering, and others aligned Engineering -</p>
         		</div>
         		<div class="row latest_blog_inner">
-        			<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+        			<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-1.jpg" alt=""> -->
@@ -568,7 +569,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+        			<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-2.jpg" alt=""> -->
@@ -581,7 +582,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+        			<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-3.jpg" alt=""> -->
@@ -594,7 +595,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-4.jpg" alt=""> -->
@@ -607,7 +608,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-5.jpg" alt=""> -->
@@ -620,7 +621,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-6.jpg" alt=""> -->
@@ -633,7 +634,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-7.jpg" alt=""> -->
@@ -646,7 +647,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course-8.jpg" alt=""> -->
@@ -659,7 +660,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -672,7 +673,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -685,7 +686,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -698,7 +699,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -711,7 +712,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -724,7 +725,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -737,7 +738,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+					<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
@@ -750,7 +751,7 @@
         					</div>
         				</div>
         			</div>
-				<div class="col-lg-4 col-md-4 col-sm-6  col-6">
+				<div class="col-lg-6 col-md-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
