--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
 						<!--h4>Lecturer</h4-->
-						<p><b>Lecturer, Department of Engineering</b></p>
+						<p><b>Lecturer</b></p>
+						<p><b>Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					<!--/div>
@@ -315,7 +316,8 @@
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i-->
 						<!--h4>Former Lecturer</h4-->
-						<p><b></br>Former Lecturer, Department of Computer Science & Engineering</b></p>
+						<p><b></br>Former Lecturer</b></p>
+						<p><b>Department of Computer Science & Engineering</b></p>
 						<p><b>Prime University</b></p>
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
 					<!--/div>
@@ -324,7 +326,8 @@
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i-->
 						<!--h4>Former Lecturer (Adjunct)</h4-->
-						<p><b></br>Former Lecturer (Adjunct), Department of Engineering</b></p>
+						<p><b></br>Former Lecturer (Adjunct)</b></p>
+						<p><b>Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
 					</div>
@@ -333,9 +336,9 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
 						<!--h4>M.Sc.</h4-->
-						<p><b></br>M.Sc. Engg., Bangladesh University of Engineering and Technology</b></p>
+						<p><b></br>M.Sc. Engg. in Computer Science and Engineering</b></p>
 						<p></p>
-						<p><b></b>Computer Science and Engineering</p>
+						<p><b>Bangladesh University of Engineering and Technology</b></p>
 						<p><b>CGPA:</b> 3.50 (Expected-Minimum)</p>
 						<p><b>Position:</b> N/A</p>
 						<p><b>Passing Year:</b> Ongoing</p>
@@ -345,9 +348,9 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i-->
 						<!--h4>M.Sc.</h4-->
-						<p><b></br>M.Sc., Jahangirnagar University</b></p>
+						<p><b></br>M.Sc. in Computer Science</b></p>
 						<p></p>
-						<p><b></b>Computer Science</p>
+						<p><b>Jahangirnagar University</b></p>
 						<p><b>CGPA:</b> 3.95</p>
 						<p><b>Position:</b> 1st</p>
 						<p><b>Passing Year:</b> 2020</p>
@@ -357,9 +360,9 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i-->
 						<!--h4>B.Sc. Engg.</h4-->
-						<p><b></br>B.Sc. Engg., Rajshahi University of Engineering & Technology</b></p>
+						<p><b></br>B.Sc. Engg. in Computer Science & Engineering</b></p>
 						<p></p>
-						<p><b></b>Computer Science & Engineering</p>
+						<p><b>Rajshahi University of Engineering & Technology</b></p>
 						<p><b>CGPA:</b> 3.79 out of 4.00</p>
 						<p><b>Position:</b> 8th out of 106</p>
 						<p><b>Passing Year:</b> 2018</p>
