--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         
         
         <!--================Latest Courses Teach Area =================-->
-        <section class="projects_area latest_blog_area p_80">
+        <section class="latest_blog_area p_80">
         	<div class="container">
         		<div class="main_title">
         			<h2>Teaching Areas</h2>
