--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         					<div class="skill_main">
 							<div class="skill_item">
 								<h4 class="text-left"><b>Teaching</b> 
-								(<span class="counter"><script>document.write(new Date().getFullYear())-2019;</script></span> Years +).</h4>
+								(<span class="counter"><script>document.write((new Date()-2019).getFullYear());</script></span> Years +).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
