--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 							<h2>Md. Jahidul Islam</h2>
 							<h4>Lecturer</h4>
 							<h4>Department of Computer Science and Engineering</h4>
-							<h4><a href="https://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion & Technology</a></h4>
-							<a class="banner_btn btn btn-info" type="button" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a>
+							<h4><a href="https://cstu.ac.bd/" target="_blank" style="text-decoration: none;">Chandpur Science and Technology University</a></h4>
+<!-- 							<a class="banner_btn btn btn-info" type="button" href="https://buft.edu.bd/profile/JI" target="_blank">Academic Profile</a> -->
 							<div class="row projects-filter" style="text-align: center;">
 								<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 									<ul class="wel_item filter list">
@@ -165,7 +165,7 @@
         			<div class="col-lg-4 col-md-4">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion & Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.<br>Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
+        					<p style="text-align: justify;">Mr. Md. Jahidul Islam has been with Chandpur Science and Technology University since April 30, 2023. Prior to his current position, he worked as a Lecturer at BGMEA University of Fashion and Technology, and Prime University for more than four years.<br>Mr. Md. Jahidul Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Md. Jahidul is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-4">
@@ -307,9 +307,19 @@
 						<i class="flaticon-briefcase"></i>
 						<!--h4>Lecturer</h4-->
 						<p><b>Lecturer</b></p>
+						<p><b>Department of Computer Science and Engineering</b></p>
+						<p><b>Chandpur Science and Technology University (CSTU)</b></p>
+						<p><b>Duration:</b> April, 2023 to Present</p>
+						
+						<p><b>Former Lecturer</b></p>
+						<p><b>Department of Computer Science and Engineering</b></p>
+						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
+						<p><b>Duration:</b> Jan, 2023 to April, 2023</p>
+						
+						<p><b>Former Lecturer</b></p>
 						<p><b>Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
-						<p><b>Duration:</b> Mar, 2020 to Present</p>
+						<p><b>Duration:</b> Mar, 2020 to Dec, 2022</p>
 					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
@@ -339,7 +349,7 @@
 						<p><b>M.Sc. Engg. in Computer Science and Engineering</b></p>
 						<p></p>
 						<p><b>Bangladesh University of Engineering and Technology</b></p>
-						<p><b>CGPA:</b> 3.50 (Expected-Minimum)</p>
+						<p><b>CGPA:</b> 3.68 (Expected-Minimum)</p>
 						<p><b>Position:</b> N/A</p>
 						<p><b>Passing Year:</b> Ongoing</p>
 					<!--/div>
