--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
 						<p><b>Chandpur Science and Technology University (CSTU)</b></p>
 						<p><b>Duration:</b> April, 2023 to Present</p>
 						
-						<p><b>Former Lecturer</b></p>
+						<p><b></br>Former Lecturer</b></p>
 						<p><b>Department of Computer Science and Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Jan, 2023 to April, 2023</p>
 						
-						<p><b>Former Lecturer</b></p>
+						<p><b></br>Former Lecturer</b></p>
 						<p><b>Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Mar, 2020 to Dec, 2022</p>
@@ -373,8 +373,8 @@
 						<p><b></br>B.Sc. Engg. in Computer Science & Engineering</b></p>
 						<p></p>
 						<p><b>Rajshahi University of Engineering & Technology</b></p>
-						<p><b>CGPA:</b> 3.79 out of 4.00</p>
-						<p><b>Position:</b> 8th out of 106</p>
+						<p><b>CGPA:</b> 3.79</p>
+						<p><b>Position:</b> 8th</p>
 						<p><b>Passing Year:</b> 2018</p>
 					</div>
 				</div>
@@ -949,7 +949,7 @@
                 </div>
 		<div class="col-lg-8 col-md-8">
 			<div class="contact_info">
-				<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=BGMEA%20University+(BGMEA%20University%20of%20Engineering%20and%20Technology)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
+				<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
 			</div>
 		</div>
                 </div>
