--- a/index.html
+++ b/index.html
@@ -931,8 +931,8 @@
                         <div class="contact_info">
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
-                                <h6>Dhaka, Bangladesh</h6>
-                                <p>Department of Computer Science and Engineering<br>BGMEA University of Fashion & Technology, Nishatnagar, Turag,</p>
+                                <h6>Chandpur, Bangladesh</h6>
+                                <p>Department of Computer Science and Engineering<br>Chandpur Science and Technology University</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
@@ -941,7 +941,7 @@
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>		
-                                <h6><a href="#">jahidul.islam@buft.edu.bd</a></h6>
+<!--                                 <h6><a href="#">jahidul.islam@buft.edu.bd</a></h6> -->
                                 <h6><a href="#">jahid.jabed@gmail.com</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
@@ -949,7 +949,7 @@
                 </div>
 		<div class="col-lg-8 col-md-8">
 			<div class="contact_info">
-				<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
+				<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(Temporary Campus)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
 			</div>
 		</div>
                 </div>
