--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <title>Md. Jahidul Islam</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <!--link rel="stylesheet" href="vendors/linericon/style.css"-->
+        <link rel="stylesheet" href="vendors/linericon/style.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
-        <!--link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css"-->
-        <!--link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
-        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css"-->
-        <!--link rel="stylesheet" href="vendors/animate-css/animate.css"-->
+        <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+        <link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
+        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
+        <link rel="stylesheet" href="vendors/animate-css/animate.css">
         <link rel="stylesheet" href="vendors/flaticon/flaticon.css">
         <!-- main css -->
         <link rel="stylesheet" href="css/style_updated.css">
@@ -25,7 +25,6 @@
         <header class="header_area" id="Home">
             <div class="main_menu" id="mainNav">
             	<nav class="navbar navbar-expand-lg navbar-light">
-                        
 			<div class="container box_1620">
 				<button class="dark_btn" onclick="dayNightToggle()">&emsp;&emsp;</button>
 				<!-- Brand and toggle get grouped for better mobile display -->
@@ -56,7 +55,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
-						
+
 					</ul>
 				</div>
 			</div>
@@ -76,7 +75,6 @@
 							<div class="banner_content">
 								<img src="img/banner/Md Jahidul Islam - BB.png" alt="">
 							</div>
-
 						</div>
 					</div>
 					<div class="col-lg-6" style="align: center;">
