--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
+	    <meta name="google-site-verification" content="qSSe126se-wC5Exls8djJyC5YvmtiAJtDUuZqEbL9T8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>Md. Jahidul Islam</title>
