--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
                                 <h6>Chandpur, Bangladesh</h6>
-                                <p>Department of Computer Science and Engineering<br>Chandpur Science and Technology University</p>
+                                <p>Room No - 301<br>Department of Computer Science and Engineering<br>Chandpur Science and Technology University</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
@@ -74,7 +74,7 @@
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
-                                <h6><a href="#">jahid.jabed@gmail.com</a></h6>
+                                <h6><a href="#">jahid.cse@cstu.ac.bd</a><a href="#">jahid.jabed@gmail.com</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
 						</div>
