--- a/contact.html
+++ b/contact.html
@@ -74,14 +74,14 @@
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
-                                <h6><a href="#">jahid.cse@cstu.ac.bd</a><a href="#">jahid.jabed@gmail.com</a></h6>
+                                <h6><a href="#">jahid.cse@cstu.ac.bd</a><br><a href="#">jahid.jabed@gmail.com</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
 						</div>
                 	</div>
 					<div class="col-lg-8 col-md-8">
 						<div class="contact_info">
-							<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(Temporary%20Campus)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
+							<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
 						</div>
 					</div>
                 </div>
