--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,8 @@
                 	</div>
 					<div class="col-lg-8 col-md-8">
 						<div class="contact_info">
-							<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
+							<iframe width="200" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=200&amp;height=100%25&amp;hl=en&amp;q=23.247312,90.687687+(Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population Estimator map</a></iframe>
+							<!--iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe-->
 						</div>
 					</div>
                 </div>
