--- a/contact.html
+++ b/contact.html
@@ -79,12 +79,14 @@
                             </div>
 						</div>
                 	</div>
-					<div class="col-lg-8 col-md-8">
+					<!--div class="col-lg-8 col-md-8">
 						<div class="contact_info">
 							<iframe width="200" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=200&amp;height=100%25&amp;hl=en&amp;q=23.247312,90.687687+(Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population Estimator map</a></iframe>
-							<!--iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe-->
+							<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
 						</div>
-					</div>
+					</div-->
+						<div class="mapouter col-lg-8 col-md-8"><div class="gmap_canvas contact_info"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=300&amp;hl=en&amp;q=Chandpur Science and Technology University (CSTU) - Temporary Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections Puzzle</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
+					
                 </div>
             </div>
         </section>
