--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
-                                <h6><a href="#">jahid.cse@cstu.ac.bd</a><br><a href="#">jahid.jabed@gmail.com</a></h6>
+                                <h6><a href="#">jahid.cse@cstu.ac.bd</a><br><a href="#">jahid@cse.cstu.ac.bd</a><br><a href="#">jahid.jabed@gmail.com</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
 						</div>
