--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<h5><a href="https://cstu.ac.bd/" target="_blank" style="text-decoration: none;">Chandpur Science and Technology University</a></h5>
 								<!-- <a class="banner_btn btn btn-info" type="button" href="#" target="_blank">Academic Profile</a> -->
 								<div class="row projects-filter" style="text-align: center;">
-									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
+<!-- 									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 										<ul class="wel_item filter list">
 											<li><i class="lnr lnr-graduation-hat"></i></li>
 											<li><h4>3</h4></li>
@@ -86,7 +86,7 @@
 												</a>
 											</li>
 										</ul>
-									</div>
+									</div> -->
 									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 										<ul class="wel_item filter list">
 											<li><i class="lnr lnr-earth"></i></li>
