--- a/experience.html
+++ b/experience.html
@@ -78,12 +78,12 @@
 							<p><b></br>Former Lecturer</b></p>
 							<p><b>Department of Computer Science and Engineering</b></p>
 							<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
-							<p><b>Duration:</b> Jan, 2023 to April, 2023</p>
+							<p><b>Duration:</b> Mar, 2020 to April, 2023</p>
 							
-							<p><b></br>Former Lecturer</b></p>
+							<!--p><b></br>Former Lecturer</b></p>
 							<p><b>Department of Engineering</b></p>
 							<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
-							<p><b>Duration:</b> Mar, 2020 to Dec, 2022</p>
+							<p><b>Duration:</b> Mar, 2020 to Dec, 2022</p-->
 							
 							<p><b></br>Former Lecturer</b></p>
 							<p><b>Department of Computer Science & Engineering</b></p>
