--- a/works.html
+++ b/works.html
@@ -71,10 +71,26 @@
 				</div>
 					
 				<div class="projects_inner row">
-					<div class="col-lg-6 col-md-6 research graduate_project">
+					<div class="col-lg-6 col-md-6 research graduate_project publications">
 						<div class="projects_item">
 							<div class="projects_text">
-								<a href="https://dataparadox.github.io/iTrustBD/" target="_blank"><h4>Study and Analysis of the BTC-Alpha Network to Identify Influence of Trust Behavior Dynamics</h4></a>
+								<a href="http://dx.doi.org/10.1007/s42979-024-02824-2" target="_blank"><h4>iTrustBD: Study and Analysis of Bitcoin Networks to Identify the Influence of Trust Behavior Dynamics</h4></a>
+								<p>Graduate Project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6 research graduate_project publications">
+						<div class="projects_item">
+							<div class="projects_text">
+								<a href="http://dx.doi.org/10.1109/STI59863.2023.10464900" target="_blank"><h4>Performance Analysis of Modern Garbage Collectors using Big Data Benchmarks in the JDK 20 Environment</h4></a>
+								<p>Graduate Project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6 research publications">
+						<div class="projects_item">
+							<div class="projects_text">
+								<a href="http://dx.doi.org/10.1016/j.mtcomm.2023.107659" target="_blank"><h4>Properties Prediction of Composites Based on Machine Learning Models: A Focus on Statistical Index Approaches</h4></a>
 								<p>Graduate Project</p>
 							</div>
 						</div>
@@ -87,10 +103,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 research graduate_project">
+					<div class="col-lg-6 col-md-6 research graduate_project publications">
 						<div class="projects_item">
 							<div class="projects_text">
-								<a href="https://jahid-jabed.github.io/ratings_cal_zoom/" target="_blank"><h4>Actual Rating Calculation of the Zoom Cloud Meetings App using User Reviews on Google Play Store with Sentiment Annotation of BERT and Hybridization of RNN and LSTM</h4></a>
+								<a href="https://doi.org/10.1016/j.eswa.2023.119919" target="_blank"><h4>Actual Rating Calculation of the Zoom Cloud Meetings App using User Reviews on Google Play Store with Sentiment Annotation of BERT and Hybridization of RNN and LSTM</h4></a>
 								<p>Graduate Project</p>
 							</div>
 						</div>
@@ -98,7 +114,7 @@
 					<div class="col-lg-6 col-md-6 research graduate_projects">
 						<div class="projects_item">
 							<div class="projects_text">
-								<a href="https://jahid-jabed.github.io/data_mining/" target="_blank"><h4>A Comparative Study on Random Forests and Deep CNN-Based Learning Techniques with and without Random Forests as Classifer for COVID-19 Identifcation from Radiography X-Ray Images.</h4></a>
+								<a href="http://dx.doi.org/10.2139/ssrn.4616703" target="_blank"><h4>A Comparative Study on Random Forests and Deep CNN-Based Learning Techniques with and without Random Forests as Classifer for COVID-19 Identifcation from Radiography X-Ray Images.</h4></a>
 								<p>Graduate Project</p>
 							</div>
 						</div>
@@ -106,7 +122,7 @@
 					<div class="col-lg-6 col-md-6 research graduate_thesis">
 						<div class="projects_item">
 							<div class="projects_text">
-								<a href="#" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
+								<a href="http://dx.doi.org/10.13140/RG.2.2.30038.01605" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
 								<p>Graduate Thesis</p>
 							</div>
 						</div>
