--- a/works.html
+++ b/works.html
@@ -75,7 +75,7 @@
 						<div class="projects_item">
 							<div class="projects_text">
 								<a href="http://dx.doi.org/10.1007/s42979-024-02824-2" target="_blank"><h4>iTrustBD: Study and Analysis of Bitcoin Networks to Identify the Influence of Trust Behavior Dynamics</h4></a>
-								<p>Graduate Project</p>
+								<p>Graduate Project; Publication</p>
 							</div>
 						</div>
 					</div>
@@ -83,7 +83,7 @@
 						<div class="projects_item">
 							<div class="projects_text">
 								<a href="http://dx.doi.org/10.1109/STI59863.2023.10464900" target="_blank"><h4>Performance Analysis of Modern Garbage Collectors using Big Data Benchmarks in the JDK 20 Environment</h4></a>
-								<p>Graduate Project</p>
+								<p>Graduate Project; Publication</p>
 							</div>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 						<div class="projects_item">
 							<div class="projects_text">
 								<a href="http://dx.doi.org/10.1016/j.mtcomm.2023.107659" target="_blank"><h4>Properties Prediction of Composites Based on Machine Learning Models: A Focus on Statistical Index Approaches</h4></a>
-								<p>Graduate Project</p>
+								<p>Publication</p>
 							</div>
 						</div>
 					</div>
@@ -107,7 +107,7 @@
 						<div class="projects_item">
 							<div class="projects_text">
 								<a href="https://doi.org/10.1016/j.eswa.2023.119919" target="_blank"><h4>Actual Rating Calculation of the Zoom Cloud Meetings App using User Reviews on Google Play Store with Sentiment Annotation of BERT and Hybridization of RNN and LSTM</h4></a>
-								<p>Graduate Project</p>
+								<p>Graduate Project; Publication</p>
 							</div>
 						</div>
 					</div>
@@ -131,7 +131,7 @@
 						<div class="projects_item">
 							<div class="projects_text">
 								<a href="https://ieeexplore.ieee.org/document/9303568" target="_blank"><h4>Improving Patient Cohort Identification using Neural Word Embedding with Structured Analysis</h4></a>
-								<p>Undergrad Thesis; Publication (International Conference)</p>
+								<p>Undergrad Thesis; Publication</p>
 							</div>
 						</div>
 					</div>
@@ -139,7 +139,7 @@
 						<div class="projects_item">
 							<div class="projects_text">
 								<a href="https://ieeexplore.ieee.org/document/8289090" target="_blank"><h4>The 12B8T multilevel line coding scheme in digital to digital data conversion</h4></a>
-								<p>Publication (International Conference)</p>
+								<p>Publication</p>
 							</div>
 						</div>
 					</div>
