--- a/public.html
+++ b/public.html
@@ -72,6 +72,7 @@
 								<div class="banner_content">
 									<img src="img/banner/Md Jahidul Islam - BB.png" alt="">
 								</div>
+								<p align="center"> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=Profile%20views&color=0e75b6&style=flat" alt="jahid-jabed" /> </p>
 							</div>
 						</div>
 						<div class="col-lg-6" style="align: center;">
