--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
 											</li>
 										</ul>
 									</div>
+									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
+										<ul class="wel_item filter list">
+											<li><i class="lnr lnr-book"></i></li>
+											<li><h4>-</h4></li>
+											<li></li>
+											<li data-filter=".publications">
+												<a class="nav-link" href="works.html" onclick="location.href='works.html';" style="text-decoration: none;  padding: 0px;">
+													<p align="center"> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=Profile%20views&color=0e75b6&style=flat" alt="jahid-jabed" /> </p>
+												</a>
+											</li>
+										</ul>
+									</div>
 								</div>
 							</div>
 						</div>
