--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 								<h5>Department of Computer Science and Engineering</h5>
 								<h5><a href="https://cstu.ac.bd/" target="_blank" style="text-decoration: none;">Chandpur Science and Technology University</a></h5>
 								<!-- <a class="banner_btn btn btn-info" type="button" href="#" target="_blank">Academic Profile</a> -->
+								<h5> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=Profile%20Views&color=0e75b6&style=flat" alt="jahid-jabed" /> </h5
 								<div class="row projects-filter" style="text-align: center;">
 <!-- 									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 										<ul class="wel_item filter list">
@@ -111,18 +112,7 @@
 											</li>
 										</ul>
 									</div>
-									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
-										<ul class="wel_item filter list">
-											<li><i class="lnr lnr-eye"></i></li>
-											<li><h4><p align="center"> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=%20&color=0e75b6&style=flat" alt="jahid-jabed" /> </p></h4></li>
-											<li></li>
-											<li data-filter=".publications">
-												<a class="nav-link" href="index.html" onclick="location.href='index.html';" style="text-decoration: none;  padding: 0px;">
-													Profile</br>Views
-												</a>
-											</li>
-										</ul>
-									</div>
+						
 								</div>
 							</div>
 						</div>
