--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<h5>Department of Computer Science and Engineering</h5>
 								<h5><a href="https://cstu.ac.bd/" target="_blank" style="text-decoration: none;">Chandpur Science and Technology University</a></h5>
 								<!-- <a class="banner_btn btn btn-info" type="button" href="#" target="_blank">Academic Profile</a> -->
-								<h5> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=Profile%20Views&color=0e75b6&style=flat" alt="jahid-jabed" /> </h5
+								<h5> <img src="https://komarev.com/ghpvc/?username=jahid-jabed&label=Profile%20Views&color=0e75b6&style=flat" alt="jahid-jabed" /> </h5>
 								<div class="row projects-filter" style="text-align: center;">
 <!-- 									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 										<ul class="wel_item filter list">
