--- a/about.html
+++ b/about.html
@@ -69,23 +69,23 @@
         					<div class="skill_main">
 								<div class="skill_item">
 									<h4 class="text-left"><b>Teaching</b> 
-									(<span class="counter">4</span> Years +).</h4>
+									(<span class="counter">document.write(new Date().getFullYear()-"02/12/2019".getFullYear())</span> Years +).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow=20 aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
 									<h4 class="text-left"><b>Research</b> 
-									(<span class="counter">40</span>%).</h4>
+									(<span class="counter">60</span>%).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
 									<h4 class="text-left"><b>Communication</b> 
-									(<span class="counter">85</span>%).</h4>
+									(<span class="counter">90</span>%).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
@@ -96,12 +96,12 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4 class="text-left"><b>Computer Skills</b> 
-									(<span class="counter">99</span>%).</h4>
+<!-- 									<h4 class="text-left"><b>Computer Skills</b> 
+									(<span class="counter">90</span>%).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -112,33 +112,33 @@
 								<div class="skill_item">
 									<h4 class="text-left"><b>Natural Language Processing</b></h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow=75 aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow=70 aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
 									<h4 class="text-left"><b>Artificial Intelligence; Machine Learning</b></h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow=70 aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
 									<h4 class="text-left"><b>Deep Learning; Transfer Learning</b></h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow=85 aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow=80 aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
 									<h4 class="text-left"><b>Data Science</b></h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow=80 aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow=70 aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
-								<div class="skill_item">
+<!-- 								<div class="skill_item">
 									<h4 class="text-left"><b>Network Science</b></h4>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow=70 aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-								</div>
+								</div> -->
 							</div>
         				</div>
         			</div>
