--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 									<h4 class="text-left"><b>Teaching</b> 
 									(<span class="counter">document.write(new Date().getFullYear()-"02/12/2019".getFullYear())</span> Years +).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="document.write(new Date().getFullYear()-"02/12/2019".getFullYear())" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
@@ -95,8 +95,8 @@
 										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
-								<div class="skill_item">
-<!-- 									<h4 class="text-left"><b>Computer Skills</b> 
+<!-- 								<div class="skill_item">
+									<h4 class="text-left"><b>Computer Skills</b> 
 									(<span class="counter">90</span>%).</h4>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
