--- a/about.html
+++ b/about.html
@@ -69,9 +69,9 @@
         					<div class="skill_main">
 								<div class="skill_item">
 									<h4 class="text-left"><b>Teaching</b> 
-									(<span class="counter">document.write(new Date().getFullYear()-"02/12/2019".getFullYear())</span> Years +).</h4>
+									(<span class="counter">document.write(new Date().getFullYear()-(new Date("02/12/2019").getFullYear()))</span> Years +).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="document.write(new Date().getFullYear()-"02/12/2019".getFullYear())" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="document.write(new Date().getFullYear()-(new Date("02/12/2019").getFullYear()))" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
