--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         					<div class="skill_main">
 								<div class="skill_item">
 									<h4 class="text-left"><b>Teaching</b> 
-									(<span class="counter">document.write(new Date().getFullYear())</span> Years +).</h4>
+									(<span class="counter">new Date().getFullYear()</span> Years +).</h4>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
