--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 									<h4 class="text-left"><b>Teaching</b> 
 									(<span><script>document.write(new Date().getFullYear()-new Date("02/12/2019").getFullYear())</script></span> Years +).</h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="<script>document.write(new Date().getFullYear()-new Date("02/12/2019").getFullYear())</script>" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
