--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<div class="collapse navbar-collapse offset projects-filter" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto filter">
 								<li class="nav-item active"><a class="nav-link" href="index.html" onclick="location.href='index.html';">Home</a></li> 
-								<li class="nav-item"><a class="nav-link" href="about.html" onclick="location.href='about.html';">About</a></li> 
+								<!--li class="nav-item"><a class="nav-link" href="about.html" onclick="location.href='about.html';">About</a></li> 
 								<li class="nav-item" data-filter=".education"><a class="nav-link" href="education.html" onclick="location.href='education.html';">Education</a></li> 
 								<li class="nav-item" data-filter=".experiences"><a class="nav-link" href="experience.html" onclick="location.href='experience.html';">Experiences</a></li>
-								<li class="nav-item"><a class="nav-link" href="works.html" onclick="location.href='works.html';">Works</a></li>
+								<li class="nav-item"><a class="nav-link" href="works.html" onclick="location.href='works.html';">Works</a></li-->
 								<li class="nav-item"><a class="nav-link" href="contact.html" onclick="location.href='contact.html';">Contact</a></li>
 							</ul>
 						</div>
@@ -92,7 +92,7 @@
 									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 										<ul class="wel_item filter list">
 											<li><i class="lnr lnr-earth"></i></li>
-											<li><h4>10</h4></li>
+											<li><h4>15</h4></li>
 											<li></li>
 											<li data-filter=".graduate_project">
 												<a class="nav-link" href="works.html" onclick="location.href='works.html';" style="text-decoration: none; padding: 0px;">
@@ -104,7 +104,7 @@
 									<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
 										<ul class="wel_item filter list">
 											<li><i class="lnr lnr-book"></i></li>
-											<li><h4>6</h4></li>
+											<li><h4>8</h4></li>
 											<li></li>
 											<li data-filter=".publications">
 												<a class="nav-link" href="works.html" onclick="location.href='works.html';" style="text-decoration: none;  padding: 0px;">
