--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
 						<div class="collapse navbar-collapse offset projects-filter" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto filter">
 								<li class="nav-item active"><a class="nav-link" href="index.html" onclick="location.href='index.html';">Home</a></li> 
-								<li class="nav-item"><a class="nav-link" href="about.html" onclick="location.href='about.html';">About</a></li> 
+								<!--li class="nav-item"><a class="nav-link" href="about.html" onclick="location.href='about.html';">About</a></li> 
 								<li class="nav-item" data-filter=".education"><a class="nav-link" href="education.html" onclick="location.href='education.html';">Education</a></li> 
 								<li class="nav-item" data-filter=".experiences"><a class="nav-link" href="experience.html" onclick="location.href='experience.html';">Experiences</a></li>
-								<li class="nav-item"><a class="nav-link" href="works.html" onclick="location.href='works.html';">Works</a></li>
+								<li class="nav-item"><a class="nav-link" href="works.html" onclick="location.href='works.html';">Works</a></li-->
 								<li class="nav-item"><a class="nav-link" href="contact.html" onclick="location.href='contact.html';">Contact</a></li>
 							</ul>
 						</div>
@@ -74,7 +74,7 @@
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
-                                <h6><a href="#">jahid@cstu.ac.bd</a><br><a href="#">jahid@cse.cstu.ac.bd</a><br><a href="#">jahid.jabed@gmail.com</a></h6>
+                                <h6><a href="#">jahid@cse.cstu.ac.bd</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
 						</div>
