--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<div class="col-lg-6" style="align: center;">
 							<div class="home_left_img">
 								<div class="banner_content">
-									<img src="img/banner/Md Jahidul Islam - BB.png" alt="">
+									<img src="img/banner/Md Jahidul Islam_Circle.png" alt="">
 								</div>
 							</div>
 						</div>
