--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
 						<div class="collapse navbar-collapse offset projects-filter" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto filter">
 								<li class="nav-item active"><a class="nav-link" href="index.html" onclick="location.href='index.html';">Home</a></li> 
-								<!--li class="nav-item"><a class="nav-link" href="about.html" onclick="location.href='about.html';">About</a></li> 
-								<li class="nav-item" data-filter=".education"><a class="nav-link" href="education.html" onclick="location.href='education.html';">Education</a></li> 
-								<li class="nav-item" data-filter=".experiences"><a class="nav-link" href="experience.html" onclick="location.href='experience.html';">Experiences</a></li>
-								<li class="nav-item"><a class="nav-link" href="works.html" onclick="location.href='works.html';">Works</a></li-->
+								<li class="nav-item"><a class="nav-link" href="https://www.cstu.ac.bd/t/jahid">About</a></li> 
+								<li class="nav-item" data-filter=".education"><a class="nav-link" href="https://www.cstu.ac.bd/t/jahid/education">Education</a></li> 
+								<li class="nav-item" data-filter=".experiences"><a class="nav-link" href="https://cstu.ac.bd/t/jahid/jobs">Experiences</a></li>
+								<li class="nav-item"><a class="nav-link" href="https://www.cstu.ac.bd/t/jahid/publications?type=journals">Works</a></li>
 								<li class="nav-item"><a class="nav-link" href="contact.html" onclick="location.href='contact.html';">Contact</a></li>
 							</ul>
 						</div>
@@ -79,14 +79,7 @@
                             </div>
 						</div>
                 	</div>
-					<!--div class="col-lg-8 col-md-8">
-						<div class="contact_info">
-							<iframe width="200" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=200&amp;height=100%25&amp;hl=en&amp;q=23.247312,90.687687+(Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population Estimator map</a></iframe>
-							<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Chandpur%20Science%20and%20Technology%20University%20(CSTU)%20-%20Temporary%20Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
-						</div>
-					</div-->
-					<!--div class="mapouter col-lg-8 col-md-8"><div class="gmap_canvas contact_info"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=300&amp;hl=en&amp;q=Chandpur Science and Technology University (CSTU) - Temporary Campus&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections Puzzle</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div-->
-					<div class="mapouter col-lg-8 col-md-8"><div class="gmap_canvas contact_info"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=300&amp;hl=en&amp;q=Department of Computer Science and Engineering, CSTU&amp;t=&amp;z=10&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections Puzzle</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
+			<div class="mapouter col-lg-8 col-md-8"><div class="gmap_canvas contact_info"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=300&amp;hl=en&amp;q=Department of Computer Science and Engineering, CSTU&amp;t=&amp;z=10&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections Puzzle</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
 					
                 </div>
             </div>
@@ -109,7 +102,6 @@
         						<li><a href="https://www.facebook.com/jahid.jabed" target="_blank"><i class="fa fa-facebook"></i></a></li>
         						<li><a href="https://github.com/jahid-jabed" target="_blank"><i class="fa fa-github"></i></a></li>
         						<li><a href="https://www.linkedin.com/in/jahid-jabed/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                    			<li><a href="#"><i class="fa fa-skype"></i></a></li>
         					</ul>
         				</aside>
         			</div>
